feat: add event notification for request friend